@@ -551,6 +551,10 @@ let rec compare_length_with l n =
     if n <= 0 then 1 else
       compare_length_with l (n-1)
 
+let is_empty = function
+  | [] -> true
+  | _ :: _ -> false
+
 (** {1 Comparison} *)
 
 (* Note: we are *not* shortcutting the list by using
