@@ -159,7 +159,7 @@
                 (apply f (field_imm 0 param) (field_imm 1 param)))
             map =
               (function f l
-                (apply (field_imm 18 (global Stdlib__List!))
+                (apply (field_imm 19 (global Stdlib__List!))
                   (apply uncurry f) l)))
            (makeblock 0
              (makeblock 0 (apply map gen_cmp vec) (apply map cmp vec))
@@ -198,7 +198,7 @@
                     (apply f (field_imm 0 param) (field_imm 1 param)))
                 map =
                   (function f l
-                    (apply (field_imm 18 (global Stdlib__List!))
+                    (apply (field_imm 19 (global Stdlib__List!))
                       (apply uncurry f) l)))
                (makeblock 0
                  (makeblock 0 (apply map eta_gen_cmp vec)
